--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-sale=1.0" />
     <title>The site with register & login</title>
-    <link rel="icon" href="https://github.com/muralimallela/register-login-page/blob/main/alphabet%20(1).png" />
+    <link rel="icon" href="https://raw.githubusercontent.com/muralimallela/register-login-page/main/alphabet%20(1).png" />
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <header>
-      <img src="https://github.com/muralimallela/register-login-page/blob/main/alphabet.png" alt="" />
+      <img src="https://raw.githubusercontent.com/muralimallela/register-login-page/main/alphabet.png" alt="" />
       <nav class="navigation">
         <a href="#">Home</a>
         <a href="#">about</a>
